--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,17 @@ on:
       - master
 
 jobs:
+  linter:
+    runs-on: ubuntu-latest
+    steps:
+
+      - uses: actions/checkout@v5
+
+      - name: Lint Dockerfile
+        uses: hadolint/hadolint-action@master
+        with:
+          dockerfile: "docker/Dockerfile"
+
   build-and-push:
     runs-on: ubuntu-latest
     strategy:
@@ -16,6 +27,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v5
+
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ secrets.DOCKERHUB_USERNAME }}/node-tools
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -31,3 +48,14 @@ jobs:
         build-args: |
           NODE_VERSION=${{ matrix.node }}
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/node-tools:${{ matrix.node }}
+        labels: ${{ steps.meta.outputs.labels }}
+
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@0.28.0
+      with:
+        image-ref: 'docker.io/${{ secrets.DOCKERHUB_USERNAME }}/node-tools:${{ matrix.node }}'
+        format: 'table'
+        exit-code: '1'
+        ignore-unfixed: true
+        vuln-type: 'os,library'
+        severity: 'CRITICAL,HIGH'
